2008-06-08  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/glwidget.*: Functions for named selections.

	* libavogadro/src/extensions/selectextension.*,
	libavogadro/src/extension/namedselectionmodel.*: Use them. At the
	moment the model is a simple list. I needed this functionality for
	specifying interaction groups in the force field setup dialog. This
	would be expanded in the future (tree view).

	* libavogadro/src/boost.h: adjust OBMol::AddHydrogens() for added pH
	paramter.

2008-06-08  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/glwidget.*: Add resized() signal.

	* libavogadro/src/extensions/overlayextension.*: 2D overlay extension
	for displaying ESP gradient, 2D representations, ???

2008-06-07  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/CMakeLists.txt, libavogadro/CMakeLists.txt: Bumped version
	to 0.8.2 now trunk is open for changes again.

2008-06-06  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/selectrotatetool.cpp: When selecting residues,
	also select the bonds.

	* libavogadro/src/extensions/hydrogenextension.*: Added "Add Hydrogens
	for pH...".

2008-06-06  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.cpp: Added calls to tr
	for i18n, thanks to Louis Ricard in bug 1986689.

	* libavogadro/src/primitive.cpp: Tweaked the calling order for the
	signals.

2008-06-05  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.*: Finally added the
	z-matrix support from Michael Banck in bug 1954332.

	* libavogadro/src/extensions/gamessinputdialog.ui: Reduced the
	vertical size of the GAMESS dialog, fixes bug 1982113.

2008-06-04  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine.cpp: Scale numBoxes with
	quality.

	* libavogadro/src/engines/surfaceengine.cpp: Instead of iterating over
	all atoms for each grid point, iterate over all atoms once and only